--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,13 @@
   <head>
     <title>jsPoint2d</title>
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@union25dev">
+    <meta name="twitter:title" content="Union25 LLC">
+    <meta name="twitter:description" content="2d Vector and Matrix Transforms">
+    <meta name="twitter:creator" content="@union25dev">
+    <meta name="twitter:image" content="http://dbroadhurst.github.io/jsPoint2d/example/logo.png">
+
     <script src="../jsPoint2d.js"></script>
     <script src="rig.js"></script>
     <link rel="stylesheet" type="text/css" href="rig.css"/>
