added link to github

--- a/example/index.html
+++ b/example/index.html
@@ -25,10 +25,12 @@
 
       <div class="center">
 
-        <div class="titlebar">
-          <p class="title">jsPoint2d</p>
-          <p class="subtitle">2d Vector and Matrix Transforms</p>
-        </div>
+        <a href="https://github.com/dbroadhurst/jsPoint2d">
+          <div class="titlebar">
+            <p class="title">jsPoint2d</p>
+            <p class="subtitle">2d Vector and Matrix Transforms</p>
+          </div>
+        </a>
 
         <div class="square">
           <canvas id="translate2d" class="canvas" width="320px" height="200px"></canvas>
